--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,10 @@
 2008/XX/XX Version 0.5.0
 ------------------------
 
+* A new 'create' keyword argument to patch and patch_object that allows them to patch
+  (and unpatch) attributes that don't exist. (Potentially unsafe to use - it can allow
+  you to have tests that pass when they are testing an API that doesn't exist - use at
+  your own risk!)
 * Mock has a new 'magics' keyword arguments - a list (or string separated by whitespace)
   of magic methods that the Mock instance should provide (only container 
   methods available so far).
@@ -16,7 +20,8 @@
   argument can now be a list of methods or an object to take the spec from.
 * patch and patch_object now take magics and spec keyword arguments. If spec is 
   passed in as 'True' then the Mock created will take the object it is replacing
-  as its spec object.
+  as its spec object. If the object being replaced is a class, then the return
+  value for the mock will also use the class as a spec.
 * Nested patches may now be applied in a different order (created mocks passed 
   in the opposite order). This is actually a bugfix.               
 * MakeMock is a Mock class factory. It takes a list of magic methods and creates a 
