--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,8 @@
 2008/XX/XX Version 0.5.0
 ------------------------
 
+* Mock.reset renamed to Mock.reset_mock, as reset is a common API name.
+* ``patch`` / ``patch_object`` are now context managers and can be used with ``with``.
 * A new 'create' keyword argument to patch and patch_object that allows them to patch
   (and unpatch) attributes that don't exist. (Potentially unsafe to use - it can allow
   you to have tests that pass when they are testing an API that doesn't exist - use at
