--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,9 +2,10 @@
  CHANGELOG
 ===========
 
-2008/XX/XX Version 0.5.0
+2009/XX/XX Version 0.5.0
 ------------------------
 
+* ``wraps`` keyword argument used for wrapping objects (and passing calls through to the wrapped object).
 * Mock.reset renamed to Mock.reset_mock, as reset is a common API name.
 * ``patch`` / ``patch_object`` are now context managers and can be used with ``with``.
 * A new 'create' keyword argument to patch and patch_object that allows them to patch
