--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,9 +8,9 @@
 * Made DEFAULT part of the public api.
 * Documentation built with Sphinx.
 * ``side_effect`` is now called with the same arguments as the mock is called with and
-  if returns a non-DEFAULT value that is automatically set as the mock.return_value.
+  if returns a non-DEFAULT value that is automatically set as the ``mock.return_value``.
 * ``wraps`` keyword argument used for wrapping objects (and passing calls through to the wrapped object).
-* Mock.reset renamed to Mock.reset_mock, as reset is a common API name.
+* ``Mock.reset`` renamed to ``Mock.reset_mock``, as reset is a common API name.
 * ``patch`` / ``patch_object`` are now context managers and can be used with ``with``.
 * A new 'create' keyword argument to patch and patch_object that allows them to patch
   (and unpatch) attributes that don't exist. (Potentially unsafe to use - it can allow
@@ -20,25 +20,12 @@
   argument can now be a list of methods or an object to take the spec from.
 * Nested patches may now be applied in a different order (created mocks passed 
   in the opposite order). This is actually a bugfix. 
-* patch and patch_object now take magics and spec keyword arguments. If spec is 
+* patch and patch_object now take a spec keyword argument. If spec is 
   passed in as 'True' then the Mock created will take the object it is replacing
   as its spec object. If the object being replaced is a class, then the return
   value for the mock will also use the class as a spec.
-  
-* Mock has a new 'magics' keyword arguments - a list (or string separated by whitespace)
-  of magic methods that the Mock instance should provide (only container 
-  methods available so far).
-* Mock has an 'items' keyword argument for mocks implementing container methods. The
-  '_items' attribute is set to a copy of this argument. Calling reset sets the _items
-  to a new copy of the original items keyword argument. Copies are only used for the
-  built-in container types dict, list, tuple, set.
-* MakeMock is a Mock class factory. It takes a list of magic methods and creates a 
-  MagicMock class (Mock subclass) with the magic methods you specified. Currently
-  only container methods are available.
-* Instantiating a Mock with magics / spec will actually create a MagicMock with 
-  magic methods from the method / spec list.
 * A Mock created without a spec will not attempt to mock any magic methods / attributes
-  (they will raise an AttributeError instead).
+  (they will raise an ``AttributeError`` instead).
 
 
 2008/10/12 Version 0.4.0
