--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,13 @@
  CHANGELOG
 ===========
 
+2009/06/22 Version 0.6.0
+------------------------
+
+* New test layout compatible with test discovery
+* Bugfix: static methods / class methods (etc) now restored correctly
+
+
 2009/04/17 Version 0.5.0
 ------------------------
 
