--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,7 +2,7 @@
  CHANGELOG
 ===========
 
-2009/07/25 Version 0.6.0
+2009/08/22 Version 0.6.0
 ------------------------
 
 * New test layout compatible with test discovery
@@ -10,6 +10,8 @@
   restored correctly
 * Mocks can raise exceptions when called by setting ``side_effect`` to an
   exception class or instance.
+* Mocks that wrap objects will not pass on calls to the underlying object if
+  an explicit return_value is set.
 
 
 2009/04/17 Version 0.5.0
