--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,14 @@
 * Ability to mock magic methods
 * Addition of ``mocksignature`` argument to ``patch`` and ``patchobject``
 * ``help(mock)`` works now (on the module). Can no longer use ``__bases__``
-  as a valid sentinel name.
+  as a valid sentinel name
+  
+Not considered:
+
+* Interaction of magic methods with spec, wraps. Should spec cause all methods to be wrapped with mocksignature perhaps?
+* Documenting mocking __enter__ and __exit__ 
+* Should magic method calls be tracked in method_calls?
+
 
 2009/08/22 Version 0.6.0
 ------------------------
