--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,6 +20,7 @@ Not done yet:
 * Test mocksignature argument to patch
 * Test deleting magic methods
 * Problem with __unicode__ method on Python 2.5 (not called with self)
+* __complex__ method looked up on instance in Python 2.5 / 2.6
 * Could change __setattr__ to handle __enter__ and __exit__ on Python 2.5 / 2.6 and __unicode__ on Python 2.5 specially
 
 
