--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,8 +20,8 @@ Not done yet:
 * Test mocksignature argument to patch
 * Test deleting magic methods
 * Document the way magic methods are wrapped in __setattr__ so that Python's inconsistent lookup of magic methods
-  doesn't matter.
-* Can we bypass the __setattr__ wrapping if the magic method is being patched with a mock?
+  doesn't matter
+* Document that wrapping is bypassed if the magic method is patched with a Mock
 
 2009/08/22 Version 0.6.0
 ------------------------
