--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,7 +8,7 @@
 * Addition of ``mocksignature``
 * Ability to mock magic methods
 * Ability to use patch and patch_object as class decorators
-* Renamed patch_object to patch.object
+* Renamed ``patch_object`` to ``patch.object`` (``patch_object`` is deprecated)
 * Addition of ``MagicMock`` class with all magic methods pre-created for you
 * Python 3 compatibility
 * Addition of ``mocksignature`` argument to ``patch`` and ``patch_object``
