--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -38,7 +38,13 @@ CHANGELOG
 =========
 
 
-2010/06/XX Version 0.7.0 beta 2
+2010/XX/XX Version 0.7.0
+------------------------
+
+* Improved several docstrings and documentation
+
+
+2010/06/23 Version 0.7.0 beta 2
 -------------------------------
 
 * :func:`patch.dict` works as a context manager as well as a decorator
