Improved failure message for Mock.assert_called_with when the mock has not yet been called.

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -41,6 +41,8 @@ CHANGELOG
 2010/XX/XX Version 0.7.0
 ------------------------
 
+* Improved message for :meth:`Mock.assert_called_with` when the mock has not
+  been called at all
 * Improved several docstrings and documentation
 
 
