--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -41,6 +41,7 @@ CHANGELOG
 2010/XX/XX Version 0.7.0
 ------------------------
 
+* Adding pickle methods to the set of supported magic methods
 * Using spec with :class:`MagicMock` only pre-creates magic methods in the spec
 * Setting a magic method on a mock with a ``spec`` can only be done if the
   spec has that method
