--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -41,14 +41,17 @@ CHANGELOG
 2010/XX/XX Version 0.7.0
 ------------------------
 
-* Adding pickle methods to the set of supported magic methods
-* Adding ``__trunc__``, ``__ceil__`` and ``__floor__`` to the set of
-  supported magic methods
 * Using spec with :class:`MagicMock` only pre-creates magic methods in the spec
 * Setting a magic method on a mock with a ``spec`` can only be done if the
   spec has that method
 * Improved message for :meth:`Mock.assert_called_with` when the mock has not
   been called at all
+* Adding the following to the set of supported magic methods:
+
+  - ``__getformat__`` and ``__setformat__``
+  - pickle methods
+  - ``__trunc__``, ``__ceil__`` and ``__floor__``
+
 * Improved several docstrings and documentation
 
 
