--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -53,6 +53,7 @@ CHANGELOG
   - ``__trunc__``, ``__ceil__`` and ``__floor__``
 
 * with statement tests now skipped on Python 2.4
+* tests require unittest2 to run on Python 2.7
 * Improved several docstrings and documentation
 
 
