Changed default numeric value of MagicMock to 1

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -46,6 +46,8 @@ CHANGELOG
   spec has that method
 * Mocks can now be named (`name` argument to constructor) and the name is used
   in the repr
+* Default numeric value for MagicMock is 1 rather than zero (because the
+  MagicMock bool defaults to True and 0 is False)
 * Improved message for :meth:`Mock.assert_called_with` when the mock has not
   been called at all
 * Adding the following to the set of supported magic methods:
