--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -52,8 +52,8 @@ CHANGELOG
   returns the type of the spec)
 * Default numeric value for MagicMock is 1 rather than zero (because the
   MagicMock bool defaults to True and 0 is False)
-* Improved message for :meth:`Mock.assert_called_with` when the mock has not
-  been called at all
+* Improved failure message for :meth:`Mock.assert_called_with` when the mock
+  has not been called at all
 * Adding the following to the set of supported magic methods:
 
   - ``__getformat__`` and ``__setformat__``
