--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,31 +15,33 @@ has an instance created from the same spec. Should this be the default
 behaviour for mocks anyway (mock return values inheriting the spec from their
 parent), or should it be controlled by an additional keyword argument
 (``inherit``) to the Mock constructor?
- 
-More complete docstrings.
 
 Interaction of magic methods with spec, wraps. For example, should spec cause
 all methods to be wrapped with mocksignature perhaps? (or another keyword
 argument perhaps?)
 
-Should magic method calls (including __call__) be tracked in method_calls?
+Should magic method calls (including `__call__`?) be tracked in `method_calls`?
 
 Could take a patch keyword argument and auto-do the patching in the
 constructor and unpatch in the destructor. This would be useful in itself, but
 violates TOOWTDI and would be unsafe for IronPython (non-deterministic calling
-of destructors).
+of destructors). Destructors aren't called *anyway* where there are cycles, but
+a weak reference with a callback can be used to get round this.
 
 ``Mock`` has several attributes. This makes it unsuitable for mocking objects
 that use these attribute names. A way round this would be to provide ``start``
 and ``stop`` (or similar) methods that *hide* these attributes when needed.
+(`_name` is a mock attribute that will be not-uncommon, but it is accessed
+externally on mocks when building `method_calls` names and so can't be changed
+to a double underscore name.)
 
 
 CHANGELOG
 =========
 
 
-2010/XX/XX Version 0.7.0
-------------------------
+2010/XX/XX Version 0.7.0 beta 3
+-------------------------------
 
 * Using spec with :class:`MagicMock` only pre-creates magic methods in the spec
 * Setting a magic method on a mock with a ``spec`` can only be done if the
