Attempting to *set* an attribute on a class with a spec will raise an  if the spec doesn't have that attribute

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -42,6 +42,8 @@ CHANGELOG
 2010/XX/XX Version 0.7.0 beta 4
 -------------------------------
 
+* Attempting to *set* an attribute on a class with a spec will raise an
+  `AttributeError` if the spec doesn't have that attribute
 * Attempting to set an unsupported magic method now raises an `AttributeError`
 * BUGFIX: mocks are now copyable (thanks to Ned Batchelder for reporting and
   diagnosing this)
