--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -52,6 +52,8 @@ CHANGELOG
 * Attempting to set an unsupported magic method now raises an `AttributeError`
 * BUGFIX: mocks are now copyable (thanks to Ned Batchelder for reporting and
   diagnosing this)
+* BUGFIX: `spec=True` works with old style classes
+* BUGFIX: `mocksignature=True` works with `patch.object`
 
 
 2010/09/18 Version 0.7.0 beta 3
